# actix_otel_sample

./: .env  Cargo.toml  Dockerfile  README.md  compose.yaml
.sqlx/: query-19ba79527ba4973acf8d70f4cd9f78207cf6783874bfa25a1280c2db07a6f8f5.json  query-6c3f6ec84ac8764bae3317a108b155fc2d340b38bf174c48ffe7e35aaf161ac6.json  query-a0587889efb2a43097e417c5d9573aad5d85453468357fb63beabcb0daa55481.json
migrations/: 20231020181214_init.sql
src/: lib.rs  main.rs  todo.rs
src/todo/: index.rs  table.rs
templates/: index.html  table.html
