[package]
name = "actix_otel_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4.4.0"
anyhow = "1.0.75"
askama = "0.12.1"
askama_actix = "0.14.0"
chrono = "0.4.31"
dotenvy = "0.15.7"
opentelemetry = "0.21.0"
opentelemetry_sdk = { version = "*", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
serde = "1.0.193"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
] }
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
