[package]
name = "actix_otel_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4.5.1"
anyhow = "1.0.81"
askama = "0.12.1"
askama_actix = "0.14.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.22.1", features = [
    "rt-tokio-current-thread",
] }
opentelemetry-otlp = { version = "0.15.0" }
serde = "1.0.197"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
] }
opentelemetry-semantic-conventions = "0.14.0"
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
